--- a/NoMango/NoMango/Css/Page/Custumer.css
+++ b/NoMango/NoMango/Css/Page/Custumer.css
@@ -6,4 +6,22 @@
     float: left;
     width: 250px;
     height: 100vh;
+    background: #ff6a00
+}
+
+.content{
+    width: calc(100%-250px);
+    height: 100vh;
+    background: #b6ff00
+}
+
+.logo {
+    border: 1px solid #ff6a00;
+    width: 100%;
+    height:50px;
+}
+
+.test{
+    width:200px;
+
 }
