--- a/View/Main/main.html
+++ b/View/Main/main.html
@@ -1,9 +1,9 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <title></title>
-    <link href="D:\TungLV\Project\NoMango\NoMango\NoMango\Css\Page\Custumer.css" rel="stylesheet" />
+    <link href="main.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -19,9 +19,9 @@
         </div>
 
         <!-- Menu Item -->
-        <div id="menu-content">
+         <div id="menu-content">
 
-        </div>
+         </div> 
     </div>
     <div class="content">
         Noi dung
