--- a/NoMango/NoMango/Css/Page/Custumer.css
+++ b/NoMango/NoMango/Css/Page/Custumer.css
@@ -1,27 +1,49 @@
-﻿body {
+﻿
+body {
+    margin: 0px;
+    ;
 }
 
-.menu{
-    border:1px solid #ff6a00;
+.menu {
+    border: 1px solid #857468;
     float: left;
     width: 250px;
     height: 100vh;
-    background: #ff6a00
+    background: #947d6d
 }
 
-.content{
+.content {
     width: calc(100%-250px);
     height: 100vh;
-    background: #b6ff00
+    background: #ebece8
 }
 
-.logo {
-    border: 1px solid #ff6a00;
+#menu-content {
     width: 100%;
-    height:50px;
+    border: 1px solid #fc0000ec;
 }
 
-.test{
-    width:200px;
-
+#logo {
+    border: 1px solid #000000;
+    width: 100%;
+    height: 50px;
+    display: flex;
 }
+
+    #logo .iconbar {
+        width: 50px;
+        height: 100%;
+        background-color: #d0e49f;
+        background-image: url('../img/images/icon-left-header.png');
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+
+    #logo .logo-text {
+        background-color: #cce294;
+        width: 100%;
+        height: 100%;
+        background-image: url('../img/images/logo-text.png');
+        background-position: 0px 13px;
+        background-repeat: no-repeat;
+    }
