--- a/View/Main/main.html
+++ b/View/Main/main.html
@@ -20,11 +20,26 @@
 
         <!-- Menu Item -->
          <div id="menu-content">
-
+            <div class="menu-item">
+                <div class="menu-item-icon icon-board"></div>
+                <div class="menu-item-text">Tổng quan</div>
+            </div>
+            <div class="menu-item">
+                <div class="menu-item-icon icon-report"></div>
+                <div class="menu-item-text">Báo cáo mua hàng</div>
+            </div>
          </div> 
     </div>
     <div class="content">
-        Noi dung
+            <div class="content-header"> 
+                <div id="menu-unit"> <input type="checkbox"></div>
+                <div id="menu-notification"></div>
+            </div>
+
+            <div class="content-body">
+                <div class="page-title">Danh mục khách hàng</div>
+                <div class="grid-content"></div>
+            </div>
     </div>
 </body>
 </html>
