--- a/View/Main/main.css
+++ b/View/Main/main.css
@@ -1,48 +1,138 @@
 
 body{
-    margin: 0px;;
+    
+    margin: 0px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 12px;
+}
+
+/* Tự thêm font chữ */
+@font-face {
+    font-family: TungFonts;
+    src: url("../");
 }
 .menu{
-    border:1px solid #857468;
+    border:1px solid #a0d3fd;
     float: left;
     width: 250px;
     height: 100vh;
-    background: #947d6d
+    background: #a6cff0;
 }
 
-.content{
-    width: calc(100%-250px);
-    height: 100vh;
-    background: #ebece8
+
+
+.content .menu-header{
+    margin-left: 250px;
+    width: calc(100% - 250PX);
+    height: 50px;
+    background-color: #b3d7f5;
 }
 
 #menu-content{
-width: 100%;
-border: 1px solid #fc0000ec;
-
+    width: 100%;
+    border: 1px solid #b9ddfa;
+    height: 100%;
 }   
 
 #logo {
-    border: 1px solid #000000;
     width: 100%;
     height:50px;
     display: flex;
 }
 
 #logo .iconbar{
- width: 50px;
- height: 100%;
- background-color: #d0e49f;
- background-image: url('../img/images/icon-left-header.png');
- background-repeat: no-repeat;
- background-position: center;
+    width: 50px;
+    height: 100%;
+    background-color:#bbd8f0;
+    background-image: url('../img/images/icon-left-header.png');
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 #logo .logo-text{
-    background-color: #cce294;
+    background-color: #bcdcf7;
     width: 100%;
     height: 100%;
     background-image: url('../img/images/logo-text.png');
     background-position: 0px 13px;
     background-repeat: no-repeat;
+}
+
+.menu-item{
+    color: #fff;
+    display: flex;
+    border: 1px solid #bbdaf3;
+}
+
+.menu-item:hover{
+    background-color: #c5def3;
+    cursor: pointer;
+}
+
+.menu-item .menu-item-icon{
+    width: 40px;
+    height: 40px;
+    background-image: url('../img/images/iconMenu.png');
+    background-repeat: no-repeat;
+
+}
+
+.menu-item .menu-item-text{
+    line-height: 40px;
+}
+
+
+.icon-board{
+    background-position: 4px 6px;
+}
+.icon-report  {
+    background-position:4px -185px;
+}
+
+#menu-unit{
+    border-radius: 5%;
+    margin-top: 4px;
+    margin-left: 40px;
+    float: left;
+    width: 120px;
+    height: 40px;
+    border: 1px solid #000;
+    background-color: #ebece8;
+}
+
+#menu-notification{
+    float: right;
+    margin-right: 200px;
+    margin-top: 4px;
+    border: 1px solid #000;
+    width: 50px;
+    height: 40px;
+}
+
+.content{
+    float: left;
+    display: block;
+    width: calc(100%-250px);
+    height: 100vh;
+    background: #e3e6db
+}
+
+.content-header {
+    height: 50px;
+    background-color: #b3d7f5;
+}
+.content-body{
+    border: 1px solid #000;
+    height: calc(100vh-70px);
+}
+
+.content-body{
+    padding: 10px;
+    border: 1px solid #000;
+    height: calc(100vh - 70px);
+    background-color: #c8f0cb;
+}
+
+.page-title{
+    border: 1px solid #000;
 }
