--- a/View/Main/main.html
+++ b/View/Main/main.html
@@ -30,16 +30,60 @@
             </div>
          </div> 
     </div>
+    
     <div class="content">
-            <div class="content-header"> 
-                <div id="menu-unit"> <input type="checkbox"></div>
-                <div id="menu-notification"></div>
+        <div class="content-header"></div>
+        <div class="content-body">
+            <div class="body-title">Danh mục</div>
+            <div class="grid-content">
+                <div class="toolbar">
+                    <button><i class="icon icon-add"></i>Thêm</button>
+                    <button><i class="icon icon-edit"></i>Sửa</button>
+                    <button><i class="icon icon-delete"></i>Xóa</button>
+                </div>
+                <div class="grid">
+                    <table border="1" cellpading ="0">
+                        <thead>
+                            <tr>
+                                <th>Mã nhân viên</th>
+                                <th>Tên nhân viên</th>
+                                <th>Email</th>
+                                <th>Số điện thoại</th>
+                                <th>Địa chỉ</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>NV0001</td>
+                                <td>Lê Văn Tùng</td>
+                                <td>097812712</td>
+                                <td>tunglv@gmail.com</td>
+                                <td>Hà Nội</td>
+                            </tr>
+                            <tr>
+                                <td>NV0001</td>
+                                <td>Lê Văn Tùng</td>
+                                <td>097812712</td>
+                                <td>tunglv@gmail.com</td>
+                                <td>Hà Nội</td>
+                            </tr>
+                            <tr>
+                                <td>NV0001</td>
+                                <td>Lê Văn Tùng</td>
+                                <td>097812712</td>
+                                <td>tunglv@gmail.com</td>
+                                <td>Hà Nội</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="paging"></div>
             </div>
-
-            <div class="content-body">
-                <div class="page-title">Danh mục khách hàng</div>
-                <div class="grid-content"></div>
-            </div>
+        </div>
     </div>
+
+    <script src="../js/jquery-3.7.1.js"></script>
+    <script src="../js/customer.js"></script>
+
 </body>
-</html>
+</html
