--- a/View/Main/main.css
+++ b/View/Main/main.css
@@ -90,6 +90,7 @@ body{
     height: 50px;
     width: 100%;
     background-color: #c6dff3;
+    box-sizing: border-box;
 }
 
 .content .content-body{
@@ -113,6 +114,7 @@ body{
     left: 10px;
     right: 10px;
     bottom: 10px; 
+    box-sizing: border-box;
 }
 
 .grid-content .toolbar{
@@ -132,6 +134,7 @@ body{
     border: 1px solid #000;
     height: 25px;
     width: 100%;
+    box-sizing: border-box;
 }
 
 .toolbar button{
