--- a/NoMango/NoMango/Css/Page/Custumer.css
+++ b/NoMango/NoMango/Css/Page/Custumer.css
@@ -28,7 +28,7 @@ body {
         width: 50px;
         height: 100%;
         background-color: #cbe1f5;
-        background-image: url('../img/images/icon-left-header.png');
+        background-image: url('d:/tunglv/project/nomango/nomango/nomango/content/imges/icon-left-header.png');
         background-repeat: no-repeat;
         background-position: center;
     }
@@ -37,7 +37,7 @@ body {
         background-color: #bcdcf7;
         width: 100%;
         height: 100%;
-        background-image: url('../img/images/logo-text.png');
+        background-image: url('d:/tunglv/project/nomango/nomango/nomango/content/imges/logo-text.png');
         background-position: 0px 13px;
         background-repeat: no-repeat;
     }
@@ -147,7 +147,7 @@ body {
 
 .toolbar .icon {
     display: block;
-    background-image: url('d:\tunglv\project\nomango\nomango\nomango\content\imges\iconsprite.png');
+    background-image: url('d:/tunglv/project/nomango/nomango/nomango/content/imges/iconsprite.png');
     background-repeat: no-repeat;
     width: 16px;
     height: 16px;
@@ -182,3 +182,9 @@ table tbody tr:hover {
     background-color: #dfe0e0;
     cursor: pointer;
 }
+
+
+.content-body {
+    
+}
+
