--- a/NoMango/NoMango/Css/Page/Employee.css
+++ b/NoMango/NoMango/Css/Page/Employee.css
@@ -1,33 +1,98 @@
-﻿.dialog-model{
-position:absolute;
-opacity:40%;
-top:0px;
-left:0px;
-right:0px;
-bottom:0px;
-}
-
-.dialog {
-    width: 600px;
-    height: 400px;
-    border: 1px solid #000;
-    border: 1px solid #000;
-    border: 1px solid #000;
-    background-color: aliceblue;
+﻿    .dialog-model{
+        display:none;
     position:absolute;
-    top: calc(50% - 200px);
-    left: calc(50% - 300px);
-    border: 3px solid #b6ff00;
-    border-radius:20pxl;
+    /*opacity:40%;*/
+    top:0px;
+    left:0px;
+    right:0px;
+    bottom:0px;
+    }
+
+    .dialog {
+        width: 600px;
+        height: 400px;
+        border: 1px solid #000;
+        background-color: aliceblue;
+        position: absolute;
+        top: calc(50% - 200px);
+        left: calc(50% - 300px);
+        border: 3px solid #cbe1f5;
+        border-radius: 20pxl;
+    }
+
+
+        .dialog .dialog-titte {
+            width: 100%;
+            height: 20px;
+            background-color: #cbe1f5;
+            display: flex;
+        }
+
+    .dialog .dialog-title .title-text{
+        line-height:25px;
+    }
+
+    .dialog-titte .dialog-button-close {
+        width: 18px;
+        height: 18px;
+        border:1px solid #fff;
+        position: absolute;
+        right: 0px;
+        background-image: url('d:/tunglv/project/nomango/nomango/nomango/content/imges/cancel.png');
+        background-repeat:no-repeat;
+        border-radius:20%;
+        background-position:center;
+    }
+
+    .dialog-titte .dialog-button-close:hover{
+        background-color:aquamarine;
+    }
+
+.dialog-body {
+    padding: 10px;
+    height:calc(100% - 80px);
+    border: 1px solid #000;
 }
 
-.dialog-title{
-    height: 200px;
-    background: #b6ff00;
+    input {
+        border: 1px solid #000;
+        height: 25px;
+        padding:0px 4px;
+    }
+
+    input:focus {
+        border: 1px solid #cbe1f5;
+    }
+
+    .row{
+        margin-bottom:8px;
+    }
+
+    label{
+        display:block;
+    }
+
+.dialog .dialog-footer {
+    height: 40px;
+    width: 100%;
+    border: 1px solid #000;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
 
-.dialog-body{
-    height:calc(100% - 25px);
-    background-color:#fff;
-}
+    .dialog-footer button {
+        width: 75px;
+        padding: 4px;
+        right:0px;
+        margin-right:10px;
+    }
 
+    button #btnSave{
+        background-color:gray
+    }
+
+button #btnSave {
+    padding-right:10px;
+    margin-right:10xp;
+}
