--- a/NoMango/NoMango/Css/Page/Custumer.css
+++ b/NoMango/NoMango/Css/Page/Custumer.css
@@ -62,7 +62,7 @@ body {
     .menu-item .menu-item-icon {
         width: 40px;
         height: 40px;
-        background-image: url('../img/images/iconMenu.png');
+        background-image: url('d:/tunglv/project/nomango/nomango/nomango/content/imges/iconmenu.png');
         background-repeat: no-repeat;
     }
 
@@ -158,11 +158,11 @@ body {
 }
 
 .icon.icon-edit {
-    background-image: url('../img/images/Edit16.png');
+    background-image: url('d:/tunglv/project/nomango/nomango/nomango/content/imges/edit16.png');
 }
 
 .icon.icon-delete {
-    background-image: url('../img/images/Edit16.png');
+    background-image: url('d:/tunglv/project/nomango/nomango/nomango/content/imges/edit16.png');
 }
 
 .grid table {
