--- a/View/Main/Employee.html
+++ b/View/Main/Employee.html
@@ -1,10 +1,10 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <title></title>
-    <link href="D:\TungLV\Project\NoMango\NoMango\NoMango\Css\Page\Custumer.css" rel="stylesheet" />
-    <link href="D:\TungLV\Project\NoMango\NoMango\NoMango\Css\Page\Employee.css" rel="stylesheet" />
+    <link href="../Main/Employee.css" rel="stylesheet" />
+    <link href="D:\TungLV\Project\NoMango\NoMango\NoMango\Css\Page\Employee.csss" rel="stylesheet" />
 </head>
 <body>
 
@@ -99,11 +99,11 @@
             <div class="dialog-body">
                 <div class="row">
                     <label>Mã nhân viên(*)</label>
-                    <input id="txtMa_nv" class="requied" type="text" />
+                    <input id="txtMa_nv" type="text" />
                 </div>
                 <div class="row">
                     <label>Tên nhân viên(*)</label>
-                    <input id="txtTen_nv" class="requied" type="text" />
+                    <input id="txtTen_nv" type="text" />
                 </div>
                 <div class="row">
                     <label>Email</label>
@@ -125,6 +125,7 @@
             </div>
         </div>
     </div>
+
 
 
     <script src="D:\TungLV\Project\NoMango\NoMango\NoMango\Js\Common\jquery-3.7.1.js"></script>
