--- a/NoMango/NoMango/Css/Page/Employee.css
+++ b/NoMango/NoMango/Css/Page/Employee.css
@@ -38,7 +38,7 @@
         border:1px solid #fff;
         position: absolute;
         right: 0px;
-        background-image: url('d:/tunglv/project/nomango/nomango/nomango/content/imges/cancel.png');
+        background-image: url('../../content/imges/cancel.png');
         background-repeat:no-repeat;
         border-radius:20%;
         background-position:center;
