--- a/Truct/Main/Main/CustomeControls/BindablePasswordBox.xaml
+++ b/Truct/Main/Main/CustomeControls/BindablePasswordBox.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="30" d:DesignWidth="800"
              >
-    <PasswordBox Name="txtPass" FontSize="15"> 
+    <PasswordBox Name="txtPassWord" FontSize="15" BorderBrush="LightGray" > 
         
     </PasswordBox>
 </UserControl>
