--- a/Truct/Main/Main/Views/LoginView.xaml
+++ b/Truct/Main/Main/Views/LoginView.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Main.Views"
-        xmlns:viewModel ="clr-namespace:Main.ViewModels"
+        xmlns:viewModel ="clr-namespace:Main.ViewModels" xmlns:customecontrols="clr-namespace:Main.CustomeControls"
         WindowStyle="None"
         Background="Transparent"
         WindowStartupLocation="CenterScreen"
@@ -66,11 +66,15 @@
 
                     <StackPanel Grid.Column="1" VerticalAlignment="Center">
                         <TextBox Name="txtUser" Margin="0,0,0,10" FontSize="15" Text="{Binding UserName}"></TextBox>
-                        <PasswordBox Name="txtPw" FontSize="15"></PasswordBox>
+                        
+                        <customecontrols:BindablePasswordBox Password="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                            
+                        </customecontrols:BindablePasswordBox>
                     </StackPanel>
 
                     <StackPanel Grid.Column="2" VerticalAlignment="Center" Margin="5,0,5,0">
-                        <Button Name="btnLogin" Click="btnLogin_Click" Cursor="Hand" Margin="0,0,0,10" FontSize="16" HorizontalContentAlignment="Center"  Foreground="White" Content="Đăng nhập">
+                        <Button Name="btnLogin" Click="btnLogin_Click" Cursor="Hand" Margin="0,0,0,10" FontSize="16" HorizontalContentAlignment="Center"  Foreground="White" Content="Đăng nhập"
+                                Command="{Binding LoginCommand}">
                             <Button.Style>
                                 <Style TargetType="Button">
                                     <Setter Property="Background" Value="#42659c"/>
